--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -14,13 +14,17 @@
   "dependencies": {},
   "devDependencies": {
     "angular": "1.5.0-rc.0",
+    "angular-chosen": "1.0.8",
     "angular-new-router": "0.5.3",
     "angular-resource": "1.5.0-rc.0",
     "angular-templates-brunch-next": "0.0.7",
     "bootstrap": "3.3.6",
     "brunch": "2.1.3",
+    "chosen-npm": "1.4.2",
+    "coffee-script-brunch": "^1.8.3",
     "css-brunch": "^1.7.0",
     "javascript-brunch": "1.8.0",
+    "jquery": "^2.2.0",
     "sass-brunch": "1.9.2"
   }
 }
