--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -20,6 +20,7 @@
     "angular-resource": "1.5.0-rc.0",
     "angular-templates-brunch-next": "0.0.7",
     "angular-translate": "^2.9.0",
+    "angular-translate-loader-static-files": "^2.9.0",
     "bootstrap": "3.3.6",
     "brunch": "2.1.3",
     "chosen-npm": "1.4.2",
