--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -23,6 +23,7 @@
     "angular-translate-loader-static-files": "^2.9.0",
     "bootstrap": "3.3.6",
     "brunch": "2.1.3",
+    "chartist": "^0.9.5",
     "chosen-npm": "1.4.2",
     "coffee-script-brunch": "^1.8.3",
     "css-brunch": "^1.7.0",
