--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -21,6 +21,7 @@
     "angular-templates-brunch-next": "0.0.7",
     "angular-translate": "^2.9.0",
     "angular-translate-loader-static-files": "^2.9.0",
+    "angular-utils-pagination": "^0.11.0",
     "bootstrap": "3.3.6",
     "brunch": "2.1.3",
     "chartist": "^0.9.5",
