--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -22,6 +22,7 @@
     "angular-translate": "^2.9.0",
     "angular-translate-loader-static-files": "^2.9.0",
     "angular-utils-pagination": "^0.11.0",
+    "babel-brunch": "^6.0.2",
     "bootstrap": "3.3.6",
     "brunch": "2.1.3",
     "chartist": "^0.9.5",
@@ -33,6 +34,6 @@
     "sass-brunch": "1.9.2"
   },
   "scripts": {
-      "postinstall": "./node_modules/.bin/brunch build"
+    "postinstall": "./node_modules/.bin/brunch build"
   }
 }
