--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "angular": "1.5.0-rc.1",
     "angular-chosen": "1.0.8",
+    "angular-chosen-localytics": "^1.4.0",
     "angular-flash-alert": "^1.1.1",
     "angular-new-router": "0.5.3",
     "angular-resource": "1.5.0-rc.0",
