--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -25,6 +25,7 @@
     "angular-utils-pagination": "^0.11.0",
     "babel-brunch": "^6.0.2",
     "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0",
     "bootstrap": "3.3.6",
     "brunch": "2.1.3",
     "chartist": "^0.9.5",
