--- a/ldapadmin/src/main/webapp/console/package.json
+++ b/ldapadmin/src/main/webapp/console/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "bootstrap": "3.3.6",
+    "bootstrap-datepicker": "^1.6.0",
     "brunch": "2.1.3",
     "chartist": "^0.9.5",
     "chosen-npm": "1.4.2",
